tests/uncompilable_examples/enum_with_named_subfields.rs
use variant_access_derive::*;

#[derive(VariantAccess)]
enum Enum {
    F1{a: i64, b: bool},
    F2(bool)
}

fn main() {

}
